# RayCasting-C

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main  main.c  main2.c  raycasting_c  state.h  utils.h
camera/: camera.h
canvas/: canvas.h
light/: ambient_light.h  light.h  point_light.h
raytracing/: ray_tracing.h
scene/: scene.h
shapes/: shape.h  sphere.h
vector/: matrix.h  vector.h  vector3d.h  vector4d.h
